# dmscreen

./: .gitignore  .sbtopts  .scalafmt.conf  Digrizash High ElfFighter 4 Level 4.json  README.md  TODO.md  build.sbt
.github/workflows/: ci.yml  scala.yml
ai/src/main/scala/ai/: ChatLanguageModel.scala  ChatMemory.scala  EmbeddingStoreWrapper.scala  EncounterTemplate.scala  OllamaContainer.scala  QdrantClient.scala  QdrantContainer.scala  StreamingChatLanguageModel.scala  util.scala
ai/src/test/resources/: application.conf  logback.xml
ai/src/test/resources/data/: classes.json  races.json  (+1 more)
debian/: changelog
debian/upstart/: start-template
dice_roller/: Cargo.toml  README.md  dice.grammar  index.html
dice_roller/src/: dice.pest  dice.rs  lib.rs  main.rs
dice_roller/tests/: dice_parser_tests.rs
login/src/main/scala/: Toast.scala
login/src/main/web/: login.html
project/: plugins.sbt
server/src/main/graphql/: dmscreen.gql  dnd5e.gql  schema.gql  sta.gql
server/src/main/resources/: application.conf  logback.xml
server/src/main/scala/: BrokenApp.scala  BrokenApp2.scala
server/src/main/sql/: V001__schema.sql  V002__testData.sql  V003__sta.sql  V004__randomTables.sql  V005__token.sql  V006__changeCR.sql  V007__Timestamp2DateTime.sql  V008__SceneNPC.sql  schema.sql  testData.sql
server/src/templates/: application.conf  etc-default
server/src/templates/debian/: changelog  control  gbp.conf
server/src/test/resources/: logback-test.xml
stLib/: .sbtopts  build.sbt
stLib/project/: plugins.sbt
web/: package-lock.json
web/src/main/web/: index.html
(+279 files in other folders)
